--- a/mystyle.css
+++ b/mystyle.css
@@ -72,7 +72,7 @@ footer{
 	background-image:url('temp.jpg');
 	background-size:cover;
 }
-#board{
+.board{
 	font-family:Candara;
 	font-size:34px;
 	color:rgba(255,255,255,0.9);
